fixed nav bar on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,7 +96,7 @@ nav ul li a {
         right: 2em;
         top: .7em;
       }
-@media (prefers-color-scheme: dark) {
+
     nav ul li a {
         text-decoration: none;
         color: white;
@@ -106,6 +106,11 @@ nav ul li a {
         letter-spacing: .2em;
         font-size: 14px;
     }
+.card  {
+    display: grid;
+    padding: .5em;
+    border: 1px solid;
+    width: fit-content;
 }
 .blog_type_h1{
     display: grid;
@@ -391,6 +396,102 @@ nav ul li a {
 .about_text{
     margin: .5em .5em;
     font-size: 2.5em;
+}
+@media only screen and (max-width: 400px) {
+    header{
+        margin: .7em .7em;
+        font-weight: 700;
+        font-family: "Poppins", sans-serif;
+        display: flex;
+    }
+    nav {
+       display: none;
+        
+    }
+    .blog_img_header{
+        margin: -20em -1em;
+        width: 100%;
+        height: 35em;
+        opacity: .2;
+        background-color: #151515;
+    }
+    .blog_type_h1{
+        display: grid;
+        place-content: center;
+        text-align: center;
+        font-size: 2.5em;
+        position: relative;
+        padding-top: .05em;
+        padding-right: 1.8em;
+    
+    }
+    .blog_welcome_text{
+        text-align: center;
+        padding-bottom: 2em;
+        padding-right: 1.8em;
+    }
+    .header_h1{
+        font-weight: 700;
+        font-family: "Poppins", sans-serif;
+        padding: .2em;
+        font-size: 1.7em;
+    }
+    .about_text{
+        margin: .3em .1em;
+        font-size: .3em;
+    }
+    .about_text_p{
+        margin: none;
+        font-size: .4em;
+        padding-bottom: 2em;
+    }
+    /* Style the navigation menu */
+.topnav {
+    overflow: hidden;
+    display: block;
+    position: relative;
+    z-index: 10;
+  }
+  
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  .topnav #myLinks {
+    display: none;
+    width: auto;
+  }
+  .topnav .mobile_nav{
+      margin-top: 6em;
+      width: 20em;
+      margin-left: 10em;
+  }
+  /* Style navigation menu links */
+  .topnav a {
+    color: white;
+    padding: 14px 20px;
+    text-decoration: none;
+    font-size: 16px;
+    display: flex;
+  }
+  
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    display: block;
+    position: absolute;
+    margin-right: -2em;
+    margin-top: .7em;
+  }
+  
+  /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+    background-color: #be18ff;
+    color: white;
+    z-index: 10;
+  }
+  
+  /* Style the active link (or home/logo) */
+  .active {
+    background-color: #be18ff79;
+    color: white;
+  }
 }
 .about_text_p{
     margin: .7em 5em;
